--- a/public/styles/logo.css
+++ b/public/styles/logo.css
@@ -2,11 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 220px;
+    height: 180px;
     background-color: transparent;
 }
 
 .logo {
-    margin-top: 0px;
+    margin-bottom: 40px;
     width: 140px;
 }
